# Sentiment-Analyzer-Dashboard

./: README.md  flowchart.excalidraw
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/database/: database_connection.py  database_init.py  history_operations.py
backend/routes/: healthcheck_router.py  history_router.py  sentiment_classifier_router.py
frontend/: .prettierrc  index.html  package.json  script.js  style.css
